examples/passing/2018/B.purs
module B where

data Foo = X | Y
