examples/failing/ExportConflictCtor/A.purs
module A where

data T1 = X
